--- a/src/app/access/login/login.component.html
+++ b/src/app/access/login/login.component.html
@@ -1,31 +1,16 @@
-<h2 class="text-center">Login</h2>
-<div class="row">
-    <div class="col-md-3">
-    </div>
-    <div class="col-md-6 col-md-offset-3">
-        <div class="jumbotron">
-            <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-                <div class="form-group">
-                    <label for="email">Email </label>
-                    <input type="email" id="email" formControlName="email" autocomplete="off" class="form-control input-sm" placeholder="Email Address">
-                    <span
-                    *ngIf="!loginForm.get('email').valid && loginForm.get('email').touched"
-                    class="help-block">Please Enter a Valid Email Username</span>
-                </div>
-                <div class="form-group">
-                    <label for="Password">Password</label>
-                    <input type="password" id="Password" formControlName="password"  autocomplete="off" class="form-control input-sm" placeholder="Password">
-                    <span
-                    *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched"
-                    class="help-block">Please Enter a Valid Password</span>
-                </div>
-               
+<div class="jumbotron bg-transparent text-center">
+    <div *ngIf="!user" class="card text-center">
+      <h4 class="card-header">
+   Zacharia Brown Portal
+      </h4>
+      <div class="card-block">
+        <h5 class="card-title mt-4 mb-4">Please Choose a Sign In Provider</h5>
+      </div>
+      <div class="card-block p-4">
 
-                <button type="submit" class="btn btn-primary" [disabled]="!loginForm.valid">Login</button>
-            </form>
-        </div>
+        <button class="btn btn-block btn-social btn-google mb-4" (click)="signInWithGoogle()"><span class="fa fa-google"></span> Sign in with Google</button>
+        <button class="btn btn-block btn-social btn-facebook" (click)="signInWithFB()"><span class="fa fa-facebook"></span>Sign in with Facebook</button>
+      </div>
     </div>
-    <div class="col-md-3">
-    </div>
- 
-</div>
+
+  </div>
