--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <img src="../../assets/zblogo.jpg" class="mr-2" class="img-fluid" style="width:50px; height: 50px; margin-right: 20px">
+  <img src="../../assets/scrlogo.jpg" class="mr-2" class="img-fluid" style="width:50px; height: 50px; margin-right: 20px">
 
 
   <div class="collapse navbar-collapse" id="navbarNav">
